--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@angular/service-worker": "^5.2.0",
-    "@fortawesome/fontawesome-free-webfonts": "^1.0.3",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^2.0.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
