--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@angular/service-worker": "^5.2.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^5.0.1",
+    "@ngrx/router-store": "^5.0.1",
+    "@ngrx/store": "^5.0.0",
+    "@ngrx/store-devtools": "^5.0.1",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^2.0.2",
