--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^2.0.2",
     "rxjs": "^5.5.6",
+    "web3-utils": "^1.0.0-beta.29",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
