--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "@ngrx/store-devtools": "^5.0.1",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "ethereumjs-util": "^5.1.4",
+    "ethjs-util": "^0.1.4",
     "ngx-bootstrap": "^2.0.2",
     "rxjs": "^5.5.6",
-    "web3-utils": "^1.0.0-beta.29",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
