--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ethereumjs-util": "^5.1.4",
     "ethjs-util": "^0.1.4",
     "ngx-bootstrap": "^2.0.2",
+    "rss-to-json": "^1.0.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
